# hildon-input-method-plugins

./: AUTHORS  Makefile.am  antigen.sh  configure.ac
data/: Makefile.am
debian/: changelog  control  copyright  hildon-im-common-virtual-settings.install  hildon-im-fkb.install  hildon-im-keyboard-assistant-scv.install  hildon-im-keyboard-assistant.install  hildon-im-keyboard-assistant.postinst  hildon-im-virtual-keyboard-layouts.install  rules
hildon-im-common-virtual-settings/: Makefile.am  western-common-vim-settings.c
hildon-im-fkb/: Makefile.am  hildon-im-western-fkb.c  hildon-im-western-fkb.h  hildon-im-word-completer.c  hildon-im-word-completer.h  imlayout_vkb.h
hildon-im-keyboard-assistant-scv/: Makefile.am  hildon-im-keyboard-assistant-scv.c  hildon-im-keyboard-assistant-scv.h
hildon-im-keyboard-monitor/: Makefile.am  hildon-im-keyboard-monitor.c  hildon-im-keyboard-monitor.h
hildon-im-virtual-keyboard-layouts/: Makefile.am  be_BY.xml  bg_BG.xml  ca_AD.xml  cs_CZ.xml  da_DK.xml  de_DE.xml  dz_BT.xml  el_GR.xml  en_GB.xml  en_US.xml  en_dvorak.xml  es_ES.xml  es_MX.xml  fa_IR.xml  fi_FI.xml  fr_CA.xml  fr_FR.xml  he_IL.xml  hr_HR.xml  hu_HU.xml  hy_AM.xml  is_IS.xml  it_IT.xml  ka_GE.xml  km_KH.xml  mk_MK.xml  ne_NP.xml  nl_NL.xml  no_NO.xml  pa_IN.xml  pl_PL.xml  pt_PT.xml  ro_RO.xml  ru_RU.xml  sk_SK.xml  sl_SI.xml  sr_RS.xml  sv_SE.xml  th_TH.xml  (+3 more)
hildon-im-western-plugin-common3/: Makefile.am  hildon-im-western-plugin-common.c
hildon-im-xkbtool/: Makefile.am  hildon-im-xkbtool.c
hildon-keyboard-assistant/: Makefile.am  hildon-keyboard-assistant.c  hildon-keyboard-assistant.h
include/: hildon-im-western-plugin-common.h  hildon-im-word-completer.h  hildon-im-xkb.h
scv_layouts/: Makefile.am  ch.xml  cz.xml  dano.xml  de.xml  fise.xml  fr.xml  it.xml  pl.xml  ptes.xml  ru.xml  us.xml
shared/: hildon-im-word-completer.c  hildon-im-xkb.c
