himplugin_LTLIBRARIES = western-common-vim-settings.la

western_common_vim_settings_la_SOURCES = western-common-vim-settings.c
western_common_vim_settings_la_CFLAGS = $(DEPS_CFLAGS) -I../include
western_common_vim_settings_la_LDFLAGS = -module -avoid-version -shared
western_common_vim_settings_la_LIBADD = $(DEPS_LIBS)
