himplugin_LTLIBRARIES = hildon_keyboard_assistant_scv.la

hildon_keyboard_assistant_scv_la_SOURCES = hildon-im-keyboard-assistant-scv.c
hildon_keyboard_assistant_scv_la_CFLAGS = $(DEPS_CFLAGS) -I../include
hildon_keyboard_assistant_scv_la_LDFLAGS = -module -avoid-version -shared
hildon_keyboard_assistant_scv_la_LIBADD = $(DEPS_LIBS)

