INCLUDES = \
       $(DEPS_CFLAGS)

hildon_im_western_plugin_common_LTLIBRARIES = hildon-im-western-plugin-common.la
hildon_im_western_plugin_commondir = /usr/lib

hildon_im_western_plugin_common_la_SOURCES =  hildon-im-western-plugin-common.c
hildon_im_western_plugin_common_la_CFLAGS = $(HILDONINPUPMETHODPLUGINS_CFLAGS) -I../include
hildon_im_western_plugin_common_la_LDFLAGS = -module -avoid-version
hildon_im_western_plugin_common_la_LIBADD = $(DEPS_LIBS)
