AM_CPPFLAGS = $(DEPS_CFLAGS) -I$(top_srcdir)/include

lib_LTLIBRARIES = libhildon-im-western-plugin-common.la

libhildon_im_western_plugin_common_la_SOURCES =  hildon-im-western-plugin-common.c
libhildon_im_western_plugin_common_la_LDFLAGS = -version-info 3:8:0
libhildon_im_western_plugin_common_la_LIBADD = $(DEPS_LIBS)
